due to circumstance could no longer use technician image, used Freepik and accredited in README.md - also amended column sizes for section to ensure maximum responsiveness and readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,6 @@ p {
 
 .about--btn {
     margin-top: 40px;
-    padding:
 }
 
 /* ----------------------------- Back to Top */
@@ -337,7 +336,7 @@ footer {
 @media screen and (max-width: 992px) {
 
     .about-us-info>p {
-        font-size: 1rem;
+        font-size: 0.8rem;
         margin-top: 28px;
         line-height: 1.3rem;
     }
@@ -366,7 +365,7 @@ footer {
 
 @media screen and (min-width: 993px) {
     .about-us-info>p {
-        font-size: 1.2rem;
+        font-size: 1rem;
         margin-top: 28px;
         line-height: 1.4rem;
 
